# ai_behavior

./: Cargo.dot  Cargo.toml  README.md
examples/: select.rs
src/: behavior.rs  lib.rs  state.rs  status.rs
tests/: test_events.rs  tests.rs
