[package]

name = "piston-ai_behavior"
version = "0.16.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>"
]
keywords = ["ai", "behavior", "piston", "game", "logic"]
description = "AI behavior tree"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/ai_behavior.git"
homepage = "https://github.com/pistondevelopers/ai_behavior"

[lib]

name = "ai_behavior"

[dependencies]
pistoncore-input = "0.14.0"
rustc-serialize = "0.3.16"

[[test]]

name = "tests"
