[package]

name = "piston-ai_behavior"
version = "0.29.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>"
]
keywords = ["ai", "behavior", "piston", "game", "logic"]
description = "AI behavior tree"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/ai_behavior.git"
homepage = "https://github.com/pistondevelopers/ai_behavior"

[lib]

name = "ai_behavior"

[dependencies]
pistoncore-input = "0.26.0"
serde_derive = "1.0"
serde = "1.0"

[[test]]

name = "tests"
