[package]
name = "piston-ai_behavior"
version = "0.32.0"
edition = "2018"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>"
]
keywords = ["ai", "behavior", "piston", "game", "logic"]
description = "AI behavior tree"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/ai_behavior.git"
homepage = "https://github.com/pistondevelopers/ai_behavior"
autotests = false

[lib]
name = "ai_behavior"

[dependencies]
pistoncore-input = "1.0.0"
serde_derive = "1.0"
serde = "1.0"

[[test]]
name = "tests"
